--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jose": "^5.9.6",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "permitio": "^2.7.2-rc",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
